fixed pace styles on mobile

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -221,7 +221,7 @@ Hero
   background: #ffffff;
   position: fixed;
   z-index: 2000;
-  top: 63px;
+  top: 83px;
   right: 100%;
   width: 100%;
   height: 2px;
@@ -271,28 +271,4 @@ Hero
     background: #fff8e2;
     color: #000;
     padding: 0.5em 0;
-}
-
-// Pace styles
-.pace {
-  -webkit-pointer-events: none;
-  pointer-events: none;
-
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-}
-
-.pace-inactive {
-  display: none;
-}
-
-.pace .pace-progress {
-  background: #ffffff;
-  position: fixed;
-  z-index: 2000;
-  top: 63px;
-  right: 100%;
-  width: 100%;
-  height: 2px;
 }
